# night24

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
chat-ui/: index.html
crates/night24-agent-core/: Cargo.toml
crates/night24-agent-core/src/: hooks.rs  lib.rs  main.rs  providers.rs  rpc.rs  skills.rs  subagents.rs  task_list.rs  tests.rs  tools.rs  types.rs
crates/night24-core/: Cargo.toml
crates/night24-core/src/: agent.rs  context_mgmt.rs  error.rs  extension.rs  lib.rs  model.rs  ollama_provider.rs  permission.rs  provider.mod.rs  security.rs  session.rs  session_store.rs  tool_executor.rs
crates/night24-core/src/provider/: anthropic.rs  echo.rs  factory.rs  mod.rs  openai.rs  openai_responses.rs  registry.rs  tool_router.rs
crates/night24-core/src/tool_executor/: definitions.rs  filesystem.rs  mod.rs  network.rs
crates/night24-gts/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/night24-gts/src/: apidoc.rs  bundler.rs  lib.rs  packagefile.rs
crates/night24-gts/src/ast/: mod.rs
crates/night24-gts/src/async_runtime/: completion.rs  mod.rs  tokio_rt.rs
crates/night24-gts/src/bytecode/: call.rs  chunk.rs  class.rs  closure.rs  compiler.rs  compiler_abrupt.rs  compiler_access.rs  compiler_assign.rs  compiler_calls.rs  compiler_classes.rs  compiler_collections.rs  compiler_conditionals.rs  compiler_control.rs  compiler_decl_store.rs  compiler_declarations.rs  compiler_destructuring.rs  compiler_expr.rs  compiler_function_proto.rs  compiler_functions.rs  compiler_helpers.rs  compiler_iterators.rs  compiler_literals.rs  compiler_match.rs  compiler_match_patterns.rs  compiler_modules.rs  compiler_operators.rs  compiler_stmt.rs  compiler_templates.rs  compiler_try.rs  emit.rs  frame.rs  interp.rs  interp_helpers.rs  mod.rs  opcode.rs  resolve.rs  upvalue.rs
crates/night24-gts/src/bytecode/compiler/: tests.rs
crates/night24-gts/src/bytecode/interp/: tests.rs
crates/night24-gts/src/bytecode/interp_helpers/: access.rs  async_ops.rs  bindings.rs  calls.rs  closures.rs  collections.rs  control.rs  modules.rs  operands.rs  stack.rs
crates/night24-gts/src/evaluator/: builtins.rs  console.rs  eval_core.rs  expressions.rs  iterator.rs  match_eval.rs  methods.rs  mod.rs  string_lit.rs  tests.rs
crates/night24-gts/src/evaluator/builtins/: array.rs  collections.rs  date.rs  globals.rs  json.rs  math.rs  object.rs  primitive.rs  promise.rs  string.rs
crates/night24-gts/src/gtp/: codec.rs  frame.rs  mod.rs  plugin.rs  transport.rs
crates/night24-gts/src/gtp/transports/: mod.rs  stdio.rs  tcp.rs
crates/night24-gts/src/lexer/: lexer.rs  mod.rs  token.rs
crates/night24-gts/src/lsp/: document.rs  mod.rs  server.rs  transport.rs
crates/night24-gts/src/module/: mod.rs
crates/night24-gts/src/object/: environment.rs  http_stream.rs  mod.rs  promise.rs  value.rs  vm.rs
crates/night24-gts/src/parser/: expressions.rs  functions_classes.rs  mod.rs  modules.rs  parser.rs  patterns.rs  statements.rs  types.rs
crates/night24-gts/src/runtime/: mod.rs
crates/night24-gts/src/stdlib/: helpers.rs  mod.rs
crates/night24-gts/src/stdlib/gtp/: client.rs  mod.rs  server.rs
crates/night24-gts/src/stdlib/helpers/: args.rs  buffer.rs  codec.rs  core.rs  crypto.rs  encoding.rs  glob.rs  http.rs  json.rs  logic.rs  mime.rs  net.rs  object_builder.rs  path.rs  random.rs  runtime.rs  serde_value.rs  signal.rs  terminal.rs  text.rs
crates/night24-gts/src/stdlib/modules/: archive_zip.rs  async_.rs  buffer.rs  cache.rs  cli.rs  collections.rs  color.rs  compress_gzip.rs  compression.rs  crypto.rs  db.rs  diff.rs  encoding_base64.rs  encoding_csv.rs  encoding_hex.rs  env.rs  events.rs  exec.rs  fs.rs  glob.rs  hash.rs  highlight.rs  image.rs  json.rs  jwt.rs  log.rs  mail.rs  markdown.rs  mime.rs  mod.rs  net_http_client.rs  net_http_server.rs  net_ip.rs  net_socket_client.rs  net_socket_server.rs  net_ws_client.rs  net_ws_server.rs  os.rs  path.rs  pdf.rs  (+27 more)
crates/night24-gts/src/stdlib/modules/tui/: app.rs  layout.rs  messages.rs  mod.rs  node.rs  render.rs
crates/night24-gts/src/stdlib/modules/tui/render/: tests.rs
crates/night24-gts/src/stdlib/modules/web/: app.rs  helpers.rs  request.rs  response.rs  routing.rs  workers.rs  ws.rs
crates/night24-gts/src/typecheck/: mod.rs
crates/night24-mcp/: Cargo.toml
crates/night24-mcp/src/: computer_controller.rs  lib.rs  memory.rs
crates/night24-protocol/: Cargo.toml
crates/night24-protocol/src/: error.rs  events.rs  hooks.rs  jsonrpc.rs  lib.rs  methods.rs  permission.rs
crates/night24-server/: Cargo.toml
crates/night24-server/src/: agent_runner.rs  api_types.rs  auth.rs  core_client.rs  hooks.rs  main.rs  reply.rs  run_events.rs  sessions.rs  state.rs  workspace.rs
docs/: desktop-css-visual-checklist.md  desktop-current-scope.md  gts-hook-script-engine-plan.md  hooks.md  plan-next.md  plan-visual-vibe-coding.md  plan.md  project-optimization-plan.md  protocol-server-agent-core-json-rpc.md  requirements.md  server-definition.md  skill-system-design.md  subagent-system-design.md  subagent-system-issues-report.md
docs/adr/: 0001-agent-core-stdio-json-rpc.md
docs/plans/: 2026-07-01-parallel-dispatch.md  2026-07-01-stdio-json-rpc-agent-core.md  2026-07-01-worker-integration-plan.md  2026-07-06-concurrent-runs.md  2026-07-07-task-list.md  2026-07-08-subagent-realtime-channels.md
tauri-app/: index.html  package-lock.json  package.json  vite.config.js
tauri-app/src/: App.jsx  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
tauri-app/src/components/: ChatPanel.jsx  ChatTabs.jsx  ContextPanel.jsx  ConversationActivity.jsx  DiffPanel.jsx  FilePreview.jsx  FileTree.jsx  MarkdownMessage.jsx  MessageBubble.jsx  PermissionRequestCard.jsx  Placeholder.jsx  RunningPanda.jsx  SettingsStrip.jsx  Sidebar.jsx  SubAgentPanel.jsx  TaskProgressPanel.jsx  TimelinePanel.jsx  ToolCallBlock.jsx  TopBar.jsx
tauri-app/src/hooks/: useAgentEvents.js  useApiClient.js  (+12 more)
tauri-app/web/: index.html
(+96 files in other folders)
