[package]
name = "night24-gts"
version = "0.2.0"
edition = "2021"
description = "GoScript — a JavaScript-style dynamic scripting language interpreter implemented in Rust"
license = "MIT"
exclude = ["tests/**", "bench/**", "examples/**", "editors/**", "scripts/**", ".github/**"]
autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "gts"
path = "src/lib.rs"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:reqwest"]
db = []

[dependencies]
# Async runtime (optional, default-on).
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "io-util", "net"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }

# Cross-platform dependencies.
# NOTE: these used to be grouped under `[target.'cfg(windows)'.dependencies]`,
# which made `cargo build` fail on Linux/macOS even though every crate here is
# platform-independent. They belong in the plain `[dependencies]` table.
base64 = "0.21"
chrono = "0.4"
flate2 = "1"
crossterm = "0.28"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
quick-xml = "0.36"
zip = "2"
ureq = "2"
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3"

