[package]
name = "night24-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP servers and tools for Night24 AI Agent"

[dependencies]
night24-core = { path = "../night24-core" }
tokio.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
