[package]
name = "night24-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP server for Night24 AI Agent"

[[bin]]
name = "night24-server"
path = "src/main.rs"

[dependencies]
night24-core = { path = "../night24-core" }
tokio.workspace = true
futures.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
